k8s/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: mcr.microsoft.com/mssql/server:2019-latest
          resources:
            limits:
              memory: 1000Mi
              cpu: "1"
            requests:
              memory: 700Mi
              cpu: 100m
          imagePullPolicy: Always
          ports:
            - containerPort: 1433
              protocol: TCP
          volumeMounts:
            - name: volume
              mountPath: "/var/opt/mssql"
            - name: backup
              mountPath: "/var/opt/backup"
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: database-azurefile
        - name: backup
          persistentVolumeClaim:
            claimName: database-azurefile-backup
---
apiVersion: v1
kind: Service
metadata:
  name: database
  labels:
    app: database
spec:
  type: NodePort
  ports:
    - port: 1433
      protocol: TCP
      targetPort: 1433
  selector:
    app: database
