k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: #{API_TAG}#
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 50Mi
              cpu: 100m
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            periodSeconds: 10
            initialDelaySeconds: 30
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  type: NodePort
  ports:
    - port: 8090
      protocol: TCP
      targetPort: 80
  selector:
    app: api
---
apiVersion: networking.k8s.io/v1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: api.openarabic.io
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8090
