k8s/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: #{FRONTEND_TAG}#
          resources:
            limits:
              memory: 512Mi
              cpu: 1000m
            requests:
              memory: 200Mi
              cpu: 100m
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            periodSeconds: 10
            initialDelaySeconds: 30
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
              add: ["MKNOD", "CHOWN", "SETGID"]

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  type: NodePort
  ports:
    - port: 6000
      protocol: TCP
      targetPort: 5000
  selector:
    app: frontend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: openarabic.io
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 6000
